
	* file.pl.in (xst_file_run): return -1 if command fails to be found.
	  return system (command) / 256 (as stated in perlfunc) to return exit
	  code of process. Fixed stdio/stderr redirection.
	  (xst_file_locate_tool): return trivialy if path is absolute.
	* network.pl.in: when checking for "smbuse", use new service behaviour
	  to check for smbd and nmbd.
	* service.pl.in (xst_service_sysv_get_status): some init.d scripts are broken.
	  Stole redhat's init.d/function:status to do new, more fine-grained checking.
	  (xst_service_sysv_get_status_any): just a proxy.
	  (xst_service_sysv_run_initd_script): fixed init.d script invocation typo.
	  (xst_service_sysv_set_status): Always set links, to fix broken setups.
	
2001-04-17  Arturo Espinosa  <arturo@ximian.com>

	* file.pl.in: changed wrong report keys.
	* network-conf.in: smbuse and smbinstalled support.
	* network.pl.in: ditto.
	* service.pl.in (xst_service_sysv_installed): tells if certain service
	  is installed, by looking for the sysv script. Maybe should use rpm or
	  dpkg for this.
	
2001-04-14  Chema Celorio  <chema@celorio.com>

	* time-conf.in (conf_get_replace_table): typo . duh !

	* network-conf.in: ditto
	
	* users-conf.in: add Mandrake 7.2

2001-04-14  Chema Celorio  <chema@celorio.com>

	* time-conf.in: add Mandrake 7.2
	(conf_get_replace_table): link mdk 7.2 to rh 6.2
	(conf_get_parse_table): ditto.

2001-04-11  Bradford Hovinen  <hovinen@ximian.com>

	* xml.pl.in (xst_xml_scan): Call &xst_archive_data

	* general.pl.in (xst_archive_data): Implement. Archive data with
	the Ximian archiver

	* Makefile.am ($(perl_libs)): Add substitution for bin directory

2001-04-03  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (read_fstab): Fix detection of username for SMB imports.

2001-04-03  Ravi Pratap  <ravi@che.iitm.ac.in>

	* .cvsignore : add mouse-conf.in

2001-04-02  Michael Meeks  <michael@ximian.com>

	* backends/print.pl.in: Revise to simplify

	* backends/print-conf.in: ditto.
