@@ -908,8 +908,8 @@ sub xst_network_get_parse_table
 		    [ "forward",       \&xst_parse_sh_bool,           SYSCONFIG_NW, FORWARD_IPV4 ],
 		    [ "hostname",      \&xst_parse_sh,                SYSCONFIG_NW, HOSTNAME ],
 		    [ "domain",        \&xst_parse_sh,                SYSCONFIG_NW, DOMAIN ],
-		    [ "nameserver",    \&xst_parse_split_all_hash_comment, RESOLV_CONF,  "nameserver", "[ \t]+" ],
-		    [ "searchdomain",  \&xst_parse_split_first_array, RESOLV_CONF,  "search", "[ \t]+", "[ \t]+" ],
+		    [ "nameserver",    \&xst_parse_split_all_unique_hash_comment, RESOLV_CONF,  "nameserver", "[ \t]+" ],
+		    [ "searchdomain",  \&xst_parse_split_first_array_unique, RESOLV_CONF,  "search", "[ \t]+", "[ \t]+" ],
 		    [ "domainname",    \&xst_parse_split_first_str,   RESOLV_CONF,  "domain", "[ \t]+" ],
 		    [ "order",         \&xst_parse_split_first_array, HOST_CONF,    "order", "[ \t]+", "," ],
 		    [ "hostmatch",     \&xst_parse_split_first_bool,  HOST_CONF,    "multi", "[ \t]+" ],
